Fixing text align for model docs

--- a/autodocs/iodocs/public/stylesheets/scss/mabi.scss
+++ b/autodocs/iodocs/public/stylesheets/scss/mabi.scss
@@ -28,6 +28,7 @@
       width: 100%;
 
       th, td {
+        text-align: left;
         padding: 2px 5px 2px 5px;
       }
       .desccol {
